.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:15:43 **** Incremental Build of configuration Debug for project L03_Example ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:94:42: error: 'msg' undeclared (first use in this function)
   94 |     HAL_UART_Receive_IT(huart, (uint8_t*)msg, TIM2_MSG_LEN);
      |                                          ^~~
../Core/Src/main.c:94:42: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:94:47: error: 'TIM2_MSG_LEN' undeclared (first use in this function)
   94 |     HAL_UART_Receive_IT(huart, (uint8_t*)msg, TIM2_MSG_LEN);
      |                                               ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
15:15:56 **** Incremental Build of configuration Debug for project L03_Example ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "L03_Example.elf" @"objects.list"   -mcpu=cortex-m7 -T"C:\Users\AW\STM32CubeIDE\workspace_1.13.0\NUCLEO-F746ZG-Examples-ver-2023-24\L03_Example\STM32F746ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="L03_Example.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: L03_Example.elf
 
arm-none-eabi-size   L03_Example.elf 
arm-none-eabi-objdump -h -S  L03_Example.elf  > "L03_Example.list"
   text	   data	    bss	    dec	    hex	filename
  18496	    100	   2108	  20704	   50e0	L03_Example.elf
Finished building: default.size.stdout
 
Finished building: L03_Example.list
 
